--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "@types/jest": "^26.0.20",
-    "@types/node": "^12.20.4",
+    "@types/node": "^14.14.32",
     "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.1",
+    "@types/react-dom": "^17.0.2",
+    "@types/slate": "^0.47.8",
+    "@types/slate-react": "^0.22.9",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "slate": "^0.59.0",
+    "slate-react": "^0.59.0",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.0"
   },
