--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "private": true,
   "homepage": "http://systeminfected.github.io/portfolio",
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.32",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "@types/slate": "^0.47.8",
     "@types/slate-react": "^0.22.9",
+    "escape-html": "^1.0.3",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -50,7 +52,11 @@
     ]
   },
   "devDependencies": {
+    "@types/escape-html": "^1.0.0",
+    "@types/node": "^14.14.33",
     "@types/react-router-dom": "^5.1.7",
-    "gh-pages": "^3.1.0"
+    "eslint": "^7.21.0",
+    "gh-pages": "^3.1.0",
+    "prettier": "2.2.1"
   }
 }
