--- a/package.json
+++ b/package.json
@@ -55,8 +55,6 @@
     "@types/escape-html": "^1.0.0",
     "@types/node": "^14.14.33",
     "@types/react-router-dom": "^5.1.7",
-    "eslint": "^7.21.0",
-    "gh-pages": "^3.1.0",
-    "prettier": "2.2.1"
+    "gh-pages": "^3.1.0"
   }
 }
