--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
 		"@types/react-dom": "^17.0.2",
 		"@types/slate": "^0.47.8",
 		"@types/slate-react": "^0.22.9",
+		"@typescript-eslint/eslint-plugin": "^4.17.0",
+		"@typescript-eslint/parser": "^4.17.0",
 		"escape-html": "^1.0.3",
+		"eslint": "^7.22.0",
 		"node-sass": "^5.0.0",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
@@ -55,6 +58,9 @@
 		"@types/escape-html": "^1.0.0",
 		"@types/node": "^14.14.33",
 		"@types/react-router-dom": "^5.1.7",
+		"eslint-config-prettier": "^8.1.0",
+		"eslint-plugin-prettier": "^3.3.1",
+		"eslint": "^7.22.0",
 		"gh-pages": "^3.1.0",
 		"prettier": "2.2.1"
 	}
