--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"react-scripts": "4.0.3",
 		"slate": "^0.59.0",
 		"slate-react": "^0.59.0",
+		"styled-components": "^5.2.1",
 		"typescript": "^4.2.3",
 		"web-vitals": "^1.1.0"
 	},
@@ -58,9 +59,9 @@
 		"@types/escape-html": "^1.0.0",
 		"@types/node": "^14.14.33",
 		"@types/react-router-dom": "^5.1.7",
+		"eslint": "^7.22.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-prettier": "^3.3.1",
-		"eslint": "^7.22.0",
 		"gh-pages": "^3.1.0",
 		"prettier": "2.2.1"
 	}
