--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
 		"@types/slate-react": "^0.22.9",
 		"@typescript-eslint/eslint-plugin": "^4.17.0",
 		"@typescript-eslint/parser": "^4.17.0",
-		"escape-html": "^1.0.3",
 		"eslint": "^7.22.0",
 		"node-sass": "^5.0.0",
 		"react": "^17.0.1",
@@ -56,9 +55,9 @@
 		]
 	},
 	"devDependencies": {
-		"@types/escape-html": "^1.0.0",
 		"@types/node": "^14.14.33",
 		"@types/react-router-dom": "^5.1.7",
+		"@types/styled-components": "^5.1.9",
 		"eslint": "^7.22.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-prettier": "^3.3.1",
