--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,16 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# older versions
+/old
+
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
+
+# next.js
+/.next/
+/out/
 
 # testing
 /coverage
