--- a/package.json
+++ b/package.json
@@ -1,67 +1,36 @@
 {
 	"name": "portfolio",
-	"version": "7.0.0",
+	"version": "0.1.0",
 	"private": true,
-	"homepage": "http://systeminfected.github.io/portfolio",
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start"
+	},
 	"dependencies": {
 		"@material-ui/core": "^4.11.3",
 		"@material-ui/icons": "^4.11.2",
-		"@testing-library/jest-dom": "^5.11.9",
-		"@testing-library/react": "^11.2.5",
-		"@testing-library/user-event": "^12.8.1",
-		"@types/jest": "^26.0.20",
+		"@svgr/webpack": "^5.5.0",
 		"@types/react": "^17.0.3",
 		"@types/react-dom": "^17.0.2",
-		"@types/slate": "^0.47.8",
-		"@types/slate-react": "^0.22.9",
 		"@typescript-eslint/eslint-plugin": "^4.17.0",
 		"@typescript-eslint/parser": "^4.17.0",
 		"eslint": "^7.22.0",
-		"node-sass": "^5.0.0",
-		"react": "^17.0.1",
-		"react-dom": "^17.0.1",
-		"react-router-dom": "^5.2.0",
-		"react-scripts": "4.0.3",
-		"slate": "^0.59.0",
-		"slate-react": "^0.59.0",
-		"styled-components": "^5.2.1",
-		"typescript": "^4.2.3",
-		"web-vitals": "^1.1.0"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
+		"next": "10.1.1",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"sass": "^1.32.8",
+		"styled-components": "^5.2.1"
 	},
 	"devDependencies": {
 		"@types/node": "^14.14.33",
-		"@types/react-router-dom": "^5.1.7",
+		"@types/react": "^17.0.3",
 		"@types/styled-components": "^5.1.9",
 		"eslint": "^7.22.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-prettier": "^3.3.1",
 		"gh-pages": "^3.1.0",
-		"prettier": "2.2.1"
+		"prettier": "2.2.1",
+		"typescript": "^4.2.3"
 	}
 }
