--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ README NODE.md
 
 # misc
 .DS_Store
+*.DS_Store
 .env.local
 .env.development.local
 .env.test.local
@@ -30,7 +31,6 @@ README NODE.md
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.DS_STORE
 node_modules
 scripts/flow/*/.flowconfig
 .flowconfig
