--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
 		"@material-ui/core": "^4.11.3",
 		"@material-ui/icons": "^4.11.2",
 		"@svgr/webpack": "^5.5.0",
+		"@types/gsap": "^1.20.2",
 		"@types/react": "^17.0.3",
 		"@types/react-dom": "^17.0.2",
 		"@typescript-eslint/eslint-plugin": "^4.17.0",
 		"@typescript-eslint/parser": "^4.17.0",
 		"eslint": "^7.22.0",
+		"gsap": "^3.6.1",
 		"next": "10.1.1",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
