--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"next": "10.1.1",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
+		"react-social-icons": "^5.6.1",
 		"sass": "^1.32.8",
 		"styled-components": "^5.2.1"
 	},
