--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
 		"@types/react-dom": "^17.0.2",
 		"@typescript-eslint/eslint-plugin": "^4.17.0",
 		"@typescript-eslint/parser": "^4.17.0",
+		"axios": "^0.21.4",
+		"dotenv": "^10.0.0",
 		"eslint": "^7.22.0",
 		"gsap": "^3.6.1",
 		"next": "10.1.1",
+		"nodemailer": "^6.6.3",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"react-social-icons": "^5.6.1",
