--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"react-social-icons": "^5.6.1",
+		"react-toastify": "^8.0.2",
 		"sass": "^1.32.8",
 		"styled-components": "^5.2.1"
 	},
