--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
+		"lint": "node_modules/.bin/eslint --ext=.jsx,.js,.tsx,.ts  .",
 		"start": "next start",
 		"deploy": "next build && next export && touch ./out/.nojekyll && gh-pages -d out -t true"
 	},
@@ -16,11 +17,8 @@
 		"@types/gsap": "^1.20.2",
 		"@types/react": "^17.0.3",
 		"@types/react-dom": "^17.0.2",
-		"@typescript-eslint/eslint-plugin": "^4.17.0",
-		"@typescript-eslint/parser": "^4.17.0",
 		"axios": "^0.21.4",
 		"dotenv": "^10.0.0",
-		"eslint": "^7.22.0",
 		"gsap": "^3.6.1",
 		"next": "10.1.1",
 		"nodemailer": "^6.6.3",
@@ -35,7 +33,10 @@
 		"@types/node": "^14.14.33",
 		"@types/react": "^17.0.3",
 		"@types/styled-components": "^5.1.9",
-		"eslint": "^7.22.0",
+		"@typescript-eslint/eslint-plugin": "4.31.1",
+		"@typescript-eslint/parser": "4.31.1",
+		"eslint": "7.32.0",
+		"eslint-config-airbnb": "18.2.1",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-prettier": "^3.3.1",
 		"gh-pages": "^3.1.0",
