--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,32 @@
 {
 	"extends": [
 		"eslint:recommended",
+		"plugin:react/recommended",
 		"plugin:@typescript-eslint/recommended",
 		"airbnb",
 		"plugin:prettier/recommended",
-		"prettier/@typescript-eslint"
+		"prettier"
 	],
 	"parser": "@typescript-eslint/parser",
-	"plugins": ["@typescript-eslint", "prettier"],
+	"plugins": ["@typescript-eslint", "prettier", "react-hooks"],
 	"rules": {
 		"react/jsx-filename-extension": [
 			1,
 			{ "extensions": [".js", ".jsx", ".tsx", ".ts"] }
 		],
 		"prettier/prettier": "error",
-		"@typescript-eslint/indent": ["error", 2],
+		"@typescript-eslint/indent": "off",
+		"no-use-before-define": "off",
+		"@typescript-eslint/no-use-before-define": ["error"],
 		"@typescript-eslint/no-unused-vars": "error",
 		"@typescript-eslint/no-explicit-any": "error"
-	}
+	},
+	"overrides": [
+		{
+			"files": ["*.ts", "*.tsx"],
+			"rules": {
+				"no-undef": "off"
+			}
+		}
+	]
 }
