--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
-		"lint": "node_modules/.bin/eslint --ext=.jsx,.js,.tsx,.ts  .",
+		"lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
 		"start": "next start",
 		"deploy": "next build && next export && touch ./out/.nojekyll && gh-pages -d out -t true"
 	},
@@ -39,6 +39,8 @@
 		"eslint-config-airbnb": "18.2.1",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-prettier": "^3.3.1",
+		"eslint-plugin-react": "^7.25.2",
+		"eslint-plugin-react-hooks": "^4.2.0",
 		"gh-pages": "^3.1.0",
 		"prettier": "2.2.1",
 		"typescript": "^4.2.3"
