--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"eslint": "7.32.0",
 		"eslint-config-airbnb": "18.2.1",
 		"eslint-config-prettier": "^8.1.0",
+		"eslint-plugin-better-styled-components": "^1.1.2",
 		"eslint-plugin-prettier": "^3.3.1",
 		"eslint-plugin-react": "^7.25.2",
 		"eslint-plugin-react-hooks": "^4.2.0",
