--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,7 +42,8 @@
 		"no-shadow": "off",
 		"no-param-reassign": "off",
 		"react/no-array-index-key": "off",
-		"jsx-a11y/anchor-is-valid": "off"
+		"jsx-a11y/anchor-is-valid": "off",
+		"react/no-danger": "off"
 	},
 	"overrides": [
 		{
