--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
 		"@material-ui/icons": "^4.11.2",
 		"@svgr/webpack": "^5.5.0",
 		"@types/gsap": "^1.20.2",
+		"@types/marked": "^3.0.1",
 		"@types/react": "^17.0.3",
 		"@types/react-dom": "^17.0.2",
 		"axios": "^0.21.4",
 		"dotenv": "^10.0.0",
+		"gray-matter": "^4.0.3",
 		"gsap": "^3.6.1",
+		"marked": "^3.0.4",
 		"next": "10.1.1",
 		"nodemailer": "^6.6.3",
 		"react": "17.0.2",
