--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,9 @@
 		"no-param-reassign": "off",
 		"react/no-array-index-key": "off",
 		"jsx-a11y/anchor-is-valid": "off",
+		"jsx-a11y/click-events-have-key-events": "off",
+		"jsx-a11y/no-static-element-interactions": "off",
+		"jsx-a11y/anchor-has-content": "off",
 		"react/no-danger": "off"
 	},
 	"overrides": [
