--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
 	"name": "portfolio",
-	"homepage": "https://systeminfected.github.io/portfolio/",
 	"version": "7.0.0",
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
 		"lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
-		"start": "next start",
-		"deploy": "next build && next export && touch ./out/.nojekyll && gh-pages -d out -t true"
+		"start": "next start"
 	},
 	"dependencies": {
 		"@material-ui/core": "^4.11.3",
@@ -45,7 +43,6 @@
 		"eslint-plugin-prettier": "^3.3.1",
 		"eslint-plugin-react": "^7.25.2",
 		"eslint-plugin-react-hooks": "^4.2.0",
-		"gh-pages": "^3.1.0",
 		"prettier": "2.2.1",
 		"typescript": "^4.2.3"
 	}
