--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	"dependencies": {
 		"@material-ui/core": "^4.11.3",
 		"@material-ui/icons": "^4.11.2",
-		"@svgr/webpack": "^5.5.0",
+		"@svgr/webpack": "^6.3.1",
 		"@types/gsap": "^1.20.2",
 		"@types/marked": "^3.0.1",
 		"@types/react": "^17.0.3",
@@ -20,8 +20,8 @@
 		"dotenv": "^10.0.0",
 		"gray-matter": "^4.0.3",
 		"gsap": "^3.6.1",
-		"marked": "^3.0.4",
-		"next": "10.1.1",
+		"marked": "^4.1.0",
+		"next": "^12.3.0",
 		"nodemailer": "^6.6.3",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
