--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,7 +52,14 @@
 		{
 			"files": ["*.ts", "*.tsx"],
 			"rules": {
-				"no-undef": "off"
+				"no-undef": "off",
+				"react/require-default-props": "warn"
+			}
+		},
+		{
+			"files": ["*.js", "*.jsx"],
+			"rules": {
+				"react/prop-types": "off"
 			}
 		}
 	]
