--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,19 +1,7 @@
 {
 	"arrowParens": "always",
-	"bracketSpacing": true,
-	"embeddedLanguageFormatting": "auto",
-	"htmlWhitespaceSensitivity": "css",
-	"insertPragma": false,
-	"jsxBracketSameLine": false,
 	"jsxSingleQuote": true,
 	"printWidth": 80,
-	"proseWrap": "preserve",
-	"quoteProps": "as-needed",
-	"requirePragma": false,
 	"semi": false,
-	"singleQuote": true,
-	"tabWidth": 2,
-	"trailingComma": "es5",
-	"useTabs": true,
-	"vueIndentScriptAndStyle": false
+	"singleQuote": true
 }
