--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
+    "axios": "^1.6.1",
     "gsap": "^3.12.2",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-social-icons": "^6.6.0",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
