--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
+    "gray-matter": "^4.0.3",
     "sass": "^1.69.5",
     "typescript": "^5"
   },
