--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "gray-matter": "^4.0.3",
+    "marked": "^9.1.6",
     "sass": "^1.69.5",
     "typescript": "^5"
   },
