image cache and updated deps

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "check-packages": "npm outdated --include=dev",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
@@ -15,7 +16,7 @@
     "@mui/material": "^5.14.15",
     "axios": "^1.6.1",
     "gsap": "^3.12.2",
-    "next": "14.0.1",
+    "next": "^14.0.1",
     "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
@@ -28,9 +29,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.1",
+    "eslint-config-next": "^14.0.1",
     "gray-matter": "^4.0.3",
-    "marked": "^9.1.6",
+    "marked": "^10.0.0",
     "sass": "^1.69.5",
     "typescript": "^5"
   },
