--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-social-icons": "^6.6.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "@types/node": "^20",
