--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
   "name": "portfolio",
-  "version": "7.1.0",
+  "version": "7.2.0",
   "private": true,
   "scripts": {
     "build": "next build",
-    "check-packages": "npm outdated --include=dev",
-    "update-packages": "npm update --save",
-    "dev": "next dev",
+    "check-packages": "pnpm outdated",
+    "update-packages": "pnpm update --latest",
+    "dev": "next dev --turbopack",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^5.16.7",
-    "@mui/material": "^5.16.7",
-    "@vercel/analytics": "^1.3.1",
-    "@vercel/speed-insights": "^1.0.12",
+    "@mui/icons-material": "^6.1.6",
+    "@mui/material": "^6.1.6",
+    "@vercel/analytics": "^1.3.2",
+    "@vercel/speed-insights": "^1.1.0",
     "axios": "^1.7.7",
     "gsap": "^3.12.5",
-    "next": "^14.2.15",
-    "nodemailer": "^6.9.15",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next": "15.0.3",
+    "nodemailer": "^6.9.16",
+    "react": "18.x.x",
+    "react-dom": "18.x.x",
     "react-social-icons": "^6.18.0",
-    "react-toastify": "^10.0.5",
+    "react-toastify": "^10.0.6",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
-    "@types/node": "^20.16.11",
+    "@types/node": "^22.9.0",
     "@types/nodemailer": "^6.4.16",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.15",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "eslint": "^9.14.0",
+    "eslint-config-next": "15.0.3",
     "gray-matter": "^4.0.3",
-    "marked": "^12.0.2",
-    "sass": "^1.79.4",
+    "marked": "^15.0.0",
+    "sass": "^1.80.6",
     "typescript": "^5.6.3"
   },
+  "packageManager": "pnpm@9.12.2",
   "volta": {
-    "node": "18.18.2"
+    "node": "20.18.0"
   }
 }
